fix: Toast cross icon on small screens (#1230)
* fix: Toast cross icon on small screens

Toast message width is adjusted according
to screen size that was larger on small
screens causing the cross icon on toast to
be unclickable and non-scrollable.

VAN-911

--- a/src/Toast/_variables.scss
+++ b/src/Toast/_variables.scss
@@ -15,3 +15,6 @@ $toast-box-shadow:                  0 1.25rem 2.5rem rgba($black, .15), 0 .5rem 
 $toast-header-color:                $white !default;
 $toast-header-background-color:     $gray-700 !default;
 $toast-header-border-color:         rgba(0, 0, 0, .05) !default;
+
+$toast-container-gutter-lg:         1.25rem !default;
+$toast-container-gutter-sm:         .625rem !default;
